# iwtsd-smartsum

./: .gitignore  README.md  pyproject.toml
iwtsd/: db.sqlite3  manage.py
iwtsd/iwtsd/: asgi.py  settings.py  urls.py  wsgi.py
iwtsd/smartsum/: actions.py  admin.py  apps.py  models.py
iwtsd/smartsum/management/commands/: load_langs.py
